exercises/ex-4-01-Readiness-Probe/manifests/pong-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
  namespace: logtest
spec:
  type: ClusterIP
  selector:
    app: pingpong #this is important to match the label of the pod
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
