exercises/ex-4-01-Readiness-Probe/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logtestingress
  namespace: logtest
spec:
  rules:
  - http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: hashresponse-svc
            port:
              number: 3001
      - path: "/pingpong"
        pathType: Prefix
        backend:
          service:
            name: pingpong-svc
            port:
              number: 3001
